--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         const newYearTime = new Date(`January 01 ${nextYear} 00:00:00`);
         
         // ** SET TO TRUE TO TEST INSTANTLY **
-        const isTesting = true; 
+        const isTesting = false; 
 
         // CAPTIONS FOR EACH IMAGE
         const imageCaptions = [
