--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         const newYearTime = new Date(`January 01 ${nextYear} 00:00:00`);
         
         // ** SET TO TRUE TO TEST SLIDESHOW, FALSE TO SEE COUNTDOWN **
-        const isTesting = false; 
+        const isTesting = true; 
 
         // CAPTIONS FOR EACH IMAGE
         const imageCaptions = [
